--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Sreynit
-description: Bookmark this to keep an eye on my project updates!
+description: My personal website is under construction! Please be patient.
