--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-modernist
 title: Sreynit
 description: My personal website is under construction! Please be patient.
